# llm

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
demo/: finetuning.ipynb  from_scratch.ipynb  readme_snippets.ipynb
llm/: bench.py  configurator.py  dev.py  gpu.py  interface.py  loader.py  logger.py  ml.py  model.py  sample.py  train.py  utils.py
llm/cache/: disk.py
llm/config/: sample_prince.json  sample_prince_xs.json  train.json  train_dosto.json  train_dosto.py  train_dostoyevsky.json  train_gpt2_finetuned.json  train_gpt2_finetuned.py  train_prince.json  train_prince.py  train_prince_char.json  train_prince_xs.json  train_prince_xs.py  train_test.json  train_ulysses.json
llm/data/: data_paths.json
llm/data/dosto/: prepare.py
llm/data/prince/: prepare.py
llm/results/test/: ckpt.pt  meta.pkl
llm/tests/: config.json  conftest.py  generate_ckpt.py  prompt.txt  test_configurator.py  test_diskcache.py  test_interface.py  test_loader.py  test_sample.py  test_train.py  test_utils.py  training_data.txt
llm/tests/data/prince/805f20d7ef74c5b2/: meta.pkl
llm/tests/results/test1/: ckpt.pt
martin/: dev.py
ng-video-lecture/: bigram.py  dev.ipynb  gpt.py  single_head.py
runpod/: install.sh  rsync.sh  ssh.sh
scripts/: release.sh
scripts/runpod/: install.sh  rsync.sh  ssh.sh
