[build-system]
requires = [
    "setuptools>=61.2",
    "wheel",
]

[tool.setuptools]
packages = ["llm"]

[project]
name = "llm"
version = "0.1.0"
description = "Large Language Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache",
    "tiktoken",
    "torch",
    "transformers",
    "numpy",
    "datasets",
    "wandb",
    "tqdm",
    "notebook",
    "ipywidgets",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
