[build-system]
requires = [
    "setuptools>=61.2",
    "wheel",
]

[tool.setuptools]
packages = ["llm"]

[project]
name = "llm"
version = "0.1.1"
description = "Large Language Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache",
    "tiktoken",
    "torch",
    "HolisticTraceAnalysis",
    "torch_tb_profiler",
    "transformers",
    "numpy",
    "datasets",
    "wandb",
    "tqdm",
    "notebook",
    "ipywidgets",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
